--- a/app/src/main/res/drawable/login_edittext.xml
+++ b/app/src/main/res/drawable/login_edittext.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle" android:padding="10dp">
 
     <solid android:color="@color/edittext_bg_col" />
     <corners
@@ -10,3 +9,4 @@
         android:topLeftRadius="@dimen/edittext_corner"
         android:topRightRadius="@dimen/edittext_corner" />
 </shape>
+
