--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_bg"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -15,21 +16,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SHOPYY"
-            android:textColor="@color/primary_col"
-            android:textStyle="bold"
-            android:textSize="30dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="monospace"
             android:gravity="center"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Splash Screen"
-            android:textStyle="bold"
-            android:textSize="24dp"
-            android:gravity="center"
-            />
+            android:text="@string/app_name2"
+            android:textColor="@color/white"
+            android:textSize="40sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
