--- a/app/src/main/res/values/shopyy_theme.xml
+++ b/app/src/main/res/values/shopyy_theme.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.ShopyyTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.ShopyyTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_col</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
