--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,18 @@
     android:background="@drawable/gradient_bg"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="monospace"
-            android:gravity="center"
-            android:text="@string/app_name2"
-            android:textColor="@color/white"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+            android:layout_height="110dp"
+            android:layout_marginBottom="50dp"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/shopyy_icon0" />
 
-    </LinearLayout>
-
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </RelativeLayout>
