--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,10 +15,10 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/shopyy_logo"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="90dp"
             android:layout_marginTop="32dp"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/shopyy_icon" />
+            app:srcCompat="@drawable/shopyy_logo" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -179,9 +179,9 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="60dp"
-                android:maxWidth="@dimen/maxwidth_edittext"
-
                 android:background="@drawable/login_button"
+
+                android:maxWidth="@dimen/maxwidth_edittext"
                 android:text="@string/register"
                 android:textColor="@color/white"
                 android:textSize="16sp"
