Login Empty Handling

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -73,7 +73,7 @@
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="60dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/login_edittext"
+                android:background="@drawable/edittext_round"
                 android:hint="@string/username"
                 android:importantForAutofill="no"
                 android:inputType="text"
@@ -99,7 +99,7 @@
                     android:id="@+id/password1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/login_edittext"
+                    android:background="@drawable/edittext_round"
                     android:hint="@string/password"
                     android:importantForAutofill="no"
                     android:inputType="textPassword"
@@ -121,7 +121,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="14dp"
-                    android:background="@color/edittext_bg_col"
+                    android:background="@android:color/transparent"
                     android:onClick="reg_eye_clicked"
                     android:padding="5dp"
 
@@ -141,7 +141,7 @@
                     android:id="@+id/password2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/login_edittext"
+                    android:background="@drawable/edittext_round"
                     android:hint="@string/confirm_password"
                     android:importantForAutofill="no"
                     android:inputType="textPassword"
@@ -163,7 +163,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="14dp"
-                    android:background="@color/edittext_bg_col"
+                    android:background="@android:color/transparent"
                     android:onClick="reg_eye_clicked"
                     android:padding="5dp"
 
