--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,20 +72,23 @@
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="60dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/login_edittext"
+                android:background="@drawable/edittext_round"
                 android:hint="@string/username"
                 android:importantForAutofill="no"
                 android:inputType="text"
+                android:lineHeight="5dp"
                 android:maxWidth="@dimen/maxwidth_edittext"
                 android:maxLines="1"
                 android:paddingStart="25dp"
+
 
                 android:paddingTop="20dp"
                 android:paddingEnd="25dp"
                 android:paddingBottom="20dp"
                 android:textColor="@color/text_col"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:targetApi="p" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -98,7 +101,7 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/login_edittext"
+                    android:background="@drawable/edittext_round"
                     android:hint="@string/password"
                     android:importantForAutofill="no"
                     android:inputType="textPassword"
@@ -120,7 +123,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="14dp"
-                    android:background="@color/edittext_bg_col"
+                    android:background="@android:color/transparent"
                     android:onClick="eye_clicked"
                     android:padding="5dp"
 
