--- a/app/src/main/res/layout/activity_store_name.xml
+++ b/app/src/main/res/layout/activity_store_name.xml
@@ -53,7 +53,7 @@
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="60dp"
                 android:layout_marginBottom="50dp"
-                android:background="@drawable/login_edittext"
+                android:background="@drawable/edittext_round"
                 android:hint="@string/store_name"
                 android:importantForAutofill="no"
                 android:inputType="text"
