Empty Handling added in Register
- Handles Empty Input
- Handles Password Length
- Handles Password did match

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -73,10 +73,10 @@
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="60dp"
                 android:layout_marginBottom="20dp"
+                android:autofillHints="username"
                 android:background="@drawable/edittext_round"
                 android:hint="@string/username"
-                android:importantForAutofill="no"
-                android:inputType="text"
+                android:inputType="text|textNoSuggestions"
                 android:maxWidth="@dimen/maxwidth_edittext"
                 android:maxLines="1"
                 android:paddingStart="25dp"
@@ -99,10 +99,10 @@
                     android:id="@+id/password1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="password"
                     android:background="@drawable/edittext_round"
                     android:hint="@string/password"
-                    android:importantForAutofill="no"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textNoSuggestions"
                     android:maxWidth="@dimen/maxwidth_edittext"
                     android:maxLines="1"
                     android:paddingStart="25dp"
@@ -141,10 +141,10 @@
                     android:id="@+id/password2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="password"
                     android:background="@drawable/edittext_round"
                     android:hint="@string/confirm_password"
-                    android:importantForAutofill="no"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textNoSuggestions"
                     android:maxWidth="@dimen/maxwidth_edittext"
                     android:maxLines="1"
                     android:paddingStart="25dp"
