--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,10 +72,10 @@
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="60dp"
                 android:layout_marginBottom="20dp"
+                android:autofillHints="username"
                 android:background="@drawable/edittext_round"
                 android:hint="@string/username"
-                android:importantForAutofill="no"
-                android:inputType="text"
+                android:inputType="text|textNoSuggestions"
                 android:lineHeight="5dp"
                 android:maxWidth="@dimen/maxwidth_edittext"
                 android:maxLines="1"
@@ -101,10 +101,10 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="password"
                     android:background="@drawable/edittext_round"
                     android:hint="@string/password"
-                    android:importantForAutofill="no"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textNoSuggestions"
                     android:maxWidth="@dimen/maxwidth_edittext"
                     android:maxLines="1"
                     android:paddingStart="25dp"
