Dashboard adding error
-dashboard textfield center
-Adding string for navigation
-adding menu for navigation menu
-.java for dashboard
-dashboard
-RUNTIME ERROR

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,10 @@
     <color name="gr1_start">@color/primary_col</color>
     <color name="gr1_end">#f9d423</color>
 
+    <color name="colorPrimaryDark" />
+    <color name="colorPrimary" />
+
     <color name="red_border">#f07a62</color>
+    <color name="colorAccent" />
 
 </resources>
