--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="50dp"
