--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,8 @@
 
     <color name="red_border">#f07a62</color>
 
+
+    <color name="fab_col1">@color/primary_col</color>
+    <color name="fab_col2">#11c1f7</color>
+    <color name="fab_col3">#ffcc54</color>
 </resources>
