--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,6 @@
     <color name="fab_col1">@color/primary_col</color>
     <color name="fab_col2">#11c1f7</color>
     <color name="fab_col3">#ffcc54</color>
+
+    <color name="temp1">#F9CE22</color>
 </resources>
