--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -23,22 +22,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_alignParentTop="true"
-                android:background="@color/white"
-                android:elevation="10dp"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:buttonGravity="center_vertical"
-                app:navigationIcon="@drawable/menu_fixed_28px"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:subtitle="User"
-                app:titleMarginTop="15dp"
-                app:title="Store Name"
-                app:titleTextColor="@color/primary_col">
-            </androidx.appcompat.widget.Toolbar>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/white"
+            android:elevation="10dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:buttonGravity="center_vertical"
+            app:navigationIcon="@drawable/menu_fixed_28px"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:subtitle="User"
+            app:title="Store Name"
+            app:titleMarginTop="15dp"
+            app:titleTextColor="@color/primary_col"></androidx.appcompat.widget.Toolbar>
 
 
         <TextView
@@ -46,12 +44,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            android:layout_centerInParent="true"
             android:text="DASHBOARD"
             android:textColor="@color/gray2"
             android:textSize="30sp"
-            android:layout_centerInParent="true"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/browser_button"
@@ -78,10 +75,10 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
 
-            app:fabCustomSize="45dp"
             android:backgroundTint="@color/fab_col2"
             android:clickable="true"
             android:focusable="true"
+            app:fabCustomSize="45dp"
             app:fabSize="normal"
             app:srcCompat="@drawable/scan_barcode_36px" />
 
