--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,38 +6,32 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+
     tools:context=".dashboard"
     tools:ignore="HardcodedText">
 
-<!--    The navigation drawer-->
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_items"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_alignParentTop="true"
-                android:background="@color/white"
-                android:elevation="10dp"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:buttonGravity="center_vertical"
-                app:navigationIcon="@drawable/menu_fixed_28px"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:subtitle="User"
-                app:titleMarginTop="15dp"
-                app:title="Store Name"
-                app:titleTextColor="@color/primary_col">
-            </androidx.appcompat.widget.Toolbar>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/white"
+            android:elevation="10dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:buttonGravity="center_vertical"
+            app:navigationIcon="@drawable/menu_fixed_28px"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:subtitle="User"
+            app:titleMarginTop="15dp"
+            app:title="Store Name"
+            app:titleTextColor="@color/primary_col">
+        </androidx.appcompat.widget.Toolbar>
 
 
         <TextView
