--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,31 +6,34 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/shopyy_icon"
-            android:title="Home" />
+            android:icon="@drawable/home_28px"
+            android:title="Home"
+            android:checked="true"/>
         <item
-            android:id="@+id/nav_other_apps"
-            android:icon="@drawable/shopyy_icon"
-            android:title="Other Apps" />
-        <item android:title="Others">
-            <menu>
+            android:id="@+id/nav_list"
+            android:icon="@drawable/cheque_28px"
+            android:title="Items Lists" />
 
+        <item android:title="Others">
+
+            <menu>
                 <item
                     android:id="@+id/nav_feedback"
-                    android:icon="@drawable/shopyy_icon"
+                    android:icon="@drawable/feedback_28px"
                     android:title="Feedback" />
                 <item
                     android:id="@+id/nav_share"
-                    android:icon="@drawable/shopyy_icon"
-                    android:title="Share" />
+                    android:icon="@drawable/about_28px"
+                    android:title="About Us" />
                 <item
                     android:id="@+id/nav_rate"
-                    android:icon="@drawable/shopyy_icon"
-                    android:title="Rate Us" />
-
+                    android:icon="@drawable/logout_28px"
+                    android:title="Log out" />
             </menu>
+
         </item>
 
     </group>
+
 
 </menu>
