--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.ListsFragment">
+    tools:context=".ui.lists.ListsFragment">
 
     <TextView
         android:id="@+id/text_gallery"
@@ -15,6 +15,7 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:text="lists fragment jii"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
