commit before delete

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,7 +26,7 @@
                     android:icon="@drawable/about_28px"
                     android:title="About Us" />
                 <item
-                    android:id="@+id/nav_logout"
+                    android:id="@+id/logoutClass"
                     android:icon="@drawable/logout_28px"
                     android:title="Log out"/>
             </menu>
